--- a/src/app/pages/clients/client-create/client-create.component.html
+++ b/src/app/pages/clients/client-create/client-create.component.html
@@ -1,1 +1,114 @@
-<p>client-create works!</p>
+<section>
+  <mat-card>
+    <mat-card-title>Agregar Cliente</mat-card-title>
+    <mat-card-content>
+      <!--mat dialog content-->
+      <mat-dialog-content >
+      <!-- grid -->
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
+              <mat-label>Cliente</mat-label>
+              <input matInput  placeholder="Digita Cliente">
+              <mat-hint>Cliente</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
+              <mat-label>Telefono</mat-label>
+              <input matInput placeholder="Digita Telefono">
+              <mat-hint>Telefono</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
+              <mat-label>Atención</mat-label>
+              <input matInput placeholder="Digita Atención">
+              <mat-hint>Atención</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
+              <mat-label>Calle</mat-label>
+              <input matInput placeholder="Digita Calle">
+              <mat-hint>Calle</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
+              <mat-label>Colonia</mat-label>
+              <input matInput placeholder="Digita Colonia">
+              <mat-hint>Colonia</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
+              <mat-label>Municipio</mat-label>
+              <input matInput placeholder="Digita Municipio">
+              <mat-hint>Municipio</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
+              <mat-label>Estado</mat-label>
+              <input matInput placeholder="Digita Estado">
+              <mat-hint>Estado</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
+              <mat-label>Codigo Postal</mat-label>
+              <input matInput placeholder="Digita Codigo Postal">
+              <mat-hint>Codigo Postal</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
+              <mat-label>Pais</mat-label>
+              <input matInput placeholder="Digita Pais">
+              <mat-hint>Pais</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+      <!-- end grid-->
+      </mat-dialog-content>
+      <!-- mat dialog content -->
+
+    </mat-card-content>
+
+    <!-- actions -->
+    <mat-card-actions align="end">
+      <mat-dialog-actions align="end">
+        <button mat-flat-button mat-dialog-close color="warn">Cancelar</button>
+        <button mat-flat-button [mat-dialog-close]="true" color="primary" cdkFocusInitial>Aceptar</button>
+      </mat-dialog-actions>
+    </mat-card-actions>
+    <!--end actions -->
+  </mat-card>
+  </section>
