--- a/src/app/pages/clients/client-main/client-main.component.html
+++ b/src/app/pages/clients/client-main/client-main.component.html
@@ -1,45 +1,62 @@
+<div class="col-md-12">
+
+  <nb-card>
+    <nb-card-header>Clientes </nb-card-header>
+    <nb-card-body>
+      <section>
+        <div class="example-button-row">
+          <button mat-flat-button color="primary" (click)="openDialog()">Agregar</button>
+        </div>
+      </section>
+      <section>
+        <!-- filter -->
+        <mat-form-field appearance="standard">
+          <mat-label>Buscar </mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+        </mat-form-field>
+        <!-- end filter -->
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+            <!-- Id Column -->
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header > Id </th>
+              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header > Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <!-- isActive Column -->
+            <ng-container matColumnDef="isActive">
+              <th mat-header-cell *matHeaderCellDef  mat-sort-header> isActive </th>
+              <td mat-cell *matCellDef="let element"> {{element.isActive}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+
+            </tr>
+          </table>
+        <!--Paginator -->
+        <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina"
+                      [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions"
+                      (page)="paginar($event)" aria-label="arialLabel"
+                      showFirstLastButtons>
+        </mat-paginator>
+        <!--End Paginator -->
+
+        </div>
+      </section>
+    </nb-card-body>
+  </nb-card>
+</div>
 
 
-<mat-form-field appearance="standard">
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-</mat-form-field>
 
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
-
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header > Id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header > Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="isActive">
-      <th mat-header-cell *matHeaderCellDef  mat-sort-header> isActive </th>
-      <td mat-cell *matCellDef="let element"> {{element.isActive}} </td>
-    </ng-container>
-
-
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
-  </table>
-
-
-<mat-paginator [length]="totalRegistros"
-              [pageSize]="totalPorPagina"
-              [pageIndex]="paginaActual"
-              [pageSizeOptions]="pageSizeOptions"
-              (page)="paginar($event)"
-              aria-label="arialLabel"
-              showFirstLastButtons>
-</mat-paginator>
