--- a/src/app/pages/clients/client-main/client-main.component.scss
+++ b/src/app/pages/clients/client-main/client-main.component.scss
@@ -4,9 +4,39 @@ table {
 
 .mat-form-field {
   font-size: 14px;
-  width: 100%;
+  width: 35%;
 }
 
 td, th {
   width: 25%;
+}
+button {
+  margin-right: 8px;
+}
+.example-card {
+  max-width: 50%;
+}
+
+mat-grid-tile {
+  background: lightblue;
+}
+
+.example-container .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+
+.example-container .mat-form-field {
+  width: 220px;
+}
+
+.example-container form {
+  margin-bottom: 20px;
+}
+
+.example-container form > * {
+  margin: 5px 0;
+}
+
+.example-container .mat-radio-button {
+  margin: 0 12px;
 }
