--- a/src/app/pages/clients/client-main/client-main.component.html
+++ b/src/app/pages/clients/client-main/client-main.component.html
@@ -25,13 +25,13 @@
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header > Name </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header > Cliente </th>
               <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
 
             <!-- isActive Column -->
             <ng-container matColumnDef="isActive">
-              <th mat-header-cell *matHeaderCellDef  mat-sort-header> isActive </th>
+              <th mat-header-cell *matHeaderCellDef  mat-sort-header> Activo </th>
               <td mat-cell *matCellDef="let element"> {{element.isActive}} </td>
             </ng-container>
 
