--- a/src/app/pages/clients/client-create/client-create.component.html
+++ b/src/app/pages/clients/client-create/client-create.component.html
@@ -10,7 +10,7 @@
           <div class="form-group">
             <mat-form-field appearance="legacy">
               <mat-label>Cliente</mat-label>
-              <input matInput  placeholder="Digita Cliente">
+              <input matInput [(ngModel)]="model.name" placeholder="Digita Cliente">
               <mat-hint>Cliente</mat-hint>
             </mat-form-field>
           </div>
@@ -19,7 +19,7 @@
           <div class="form-group">
             <mat-form-field appearance="legacy">
               <mat-label>Telefono</mat-label>
-              <input matInput placeholder="Digita Telefono">
+              <input matInput [(ngModel)]="model.address.phone" placeholder="Digita Telefono">
               <mat-hint>Telefono</mat-hint>
             </mat-form-field>
           </div>
@@ -28,7 +28,7 @@
           <div class="form-group">
             <mat-form-field appearance="legacy">
               <mat-label>Atención</mat-label>
-              <input matInput placeholder="Digita Atención">
+              <input matInput [(ngModel)]="model.address.attention" placeholder="Digita Atención">
               <mat-hint>Atención</mat-hint>
             </mat-form-field>
           </div>
@@ -39,7 +39,7 @@
           <div class="form-group">
             <mat-form-field appearance="legacy">
               <mat-label>Calle</mat-label>
-              <input matInput placeholder="Digita Calle">
+              <input matInput [(ngModel)]="model.address.text" placeholder="Digita Calle">
               <mat-hint>Calle</mat-hint>
             </mat-form-field>
           </div>
@@ -48,7 +48,7 @@
           <div class="form-group">
             <mat-form-field appearance="legacy">
               <mat-label>Colonia</mat-label>
-              <input matInput placeholder="Digita Colonia">
+              <input matInput [(ngModel)]="model.address.colonia" placeholder="Digita Colonia">
               <mat-hint>Colonia</mat-hint>
             </mat-form-field>
           </div>
@@ -60,7 +60,7 @@
           <div class="form-group">
             <mat-form-field appearance="legacy">
               <mat-label>Municipio</mat-label>
-              <input matInput placeholder="Digita Municipio">
+              <input matInput [(ngModel)]="model.address.district" placeholder="Digita Municipio">
               <mat-hint>Municipio</mat-hint>
             </mat-form-field>
           </div>
@@ -69,7 +69,7 @@
           <div class="form-group">
             <mat-form-field appearance="legacy">
               <mat-label>Estado</mat-label>
-              <input matInput placeholder="Digita Estado">
+              <input matInput [(ngModel)]="model.address.state" placeholder="Digita Estado">
               <mat-hint>Estado</mat-hint>
             </mat-form-field>
           </div>
@@ -77,9 +77,9 @@
         <div class="col-sm-4">
           <div class="form-group">
             <mat-form-field appearance="legacy">
-              <mat-label>Codigo Postal</mat-label>
-              <input matInput placeholder="Digita Codigo Postal">
-              <mat-hint>Codigo Postal</mat-hint>
+              <mat-label>Ciudad</mat-label>
+              <input matInput [(ngModel)]="model.address.city" placeholder="Digita Codigo Postal">
+              <mat-hint>Ciudad</mat-hint>
             </mat-form-field>
           </div>
         </div>
@@ -89,8 +89,17 @@
         <div class="col-sm-4">
           <div class="form-group">
             <mat-form-field appearance="legacy">
+              <mat-label>Codigo Postal</mat-label>
+              <input matInput [(ngModel)]="model.address.postalCode" placeholder="Digita Codigo Postal">
+              <mat-hint>Codigo Postal</mat-hint>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field appearance="legacy">
               <mat-label>Pais</mat-label>
-              <input matInput placeholder="Digita Pais">
+              <input matInput [(ngModel)]="model.address.country" placeholder="Digita Pais">
               <mat-hint>Pais</mat-hint>
             </mat-form-field>
           </div>
@@ -105,8 +114,8 @@
     <!-- actions -->
     <mat-card-actions align="end">
       <mat-dialog-actions align="end">
-        <button mat-flat-button mat-dialog-close color="warn">Cancelar</button>
-        <button mat-flat-button [mat-dialog-close]="true" color="primary" cdkFocusInitial>Aceptar</button>
+        <button mat-flat-button mat-dialog-close color="warn" (click)="onNoClick()">Cancelar</button>
+        <button mat-flat-button [mat-dialog-close]="false" color="primary" cdkFocusInitial (click)="crear()">Aceptar</button>
       </mat-dialog-actions>
     </mat-card-actions>
     <!--end actions -->
