--- a/src/app/pages/clients/client-create/client-create.component.scss
+++ b/src/app/pages/clients/client-create/client-create.component.scss
@@ -25,3 +25,21 @@
   font-size: 13px;
   width: 100%;
 }
+@import '../../../@theme/styles/themes';
+@import '~bootstrap/scss/mixins/breakpoints';
+@import '~@nebular/theme/styles/global/breakpoints';
+
+@include nb-install-component() {
+  .position-select {
+    min-width: 13rem;
+  }
+
+  .label {
+    display: block;
+  }
+
+  nb-card-footer button:first-child {
+    @include nb-ltr(margin-right, 1rem);
+    @include nb-rtl(margin-left, 1rem);
+  }
+}
