--- a/src/app/pages/clients/client-create/client-create.component.html
+++ b/src/app/pages/clients/client-create/client-create.component.html
@@ -114,8 +114,8 @@
     <!-- actions -->
     <mat-card-actions align="end">
       <mat-dialog-actions align="end">
-        <button mat-flat-button mat-dialog-close color="warn" (click)="onNoClick()">Cancelar</button>
-        <button mat-flat-button [mat-dialog-close]="false" color="primary" cdkFocusInitial (click)="crear()">Aceptar</button>
+        <button mat-flat-button [mat-dialog-close]="false" color="warn" >Cancelar</button>
+        <button mat-flat-button [mat-dialog-close]="true" color="primary" cdkFocusInitial (click)="crear()">Aceptar</button>
       </mat-dialog-actions>
     </mat-card-actions>
     <!--end actions -->
