--- a/src/app/pages/clients/client-main/client-main.component.html
+++ b/src/app/pages/clients/client-main/client-main.component.html
@@ -40,7 +40,7 @@
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
 
             </tr>
           </table>
