--- a/src/app/pages/clients/client-create/client-create.component.html
+++ b/src/app/pages/clients/client-create/client-create.component.html
@@ -106,6 +106,21 @@
             </mat-form-field>
           </div>
         </div>
+
+        <div class="col-sm-4">
+          <div class="form-group">
+            <mat-form-field #field floatLabel="always" appearance="outline" class="radio-container">
+              <mat-label>Activo</mat-label>
+              <input matInput hidden formControlName="isActive">
+              <mat-radio-group  class="flex-wrap" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && f.isActive.errors }">
+                <mat-radio-button  class="radio-button" [value]="true"  [checked]="isChecked===true">Activo</mat-radio-button>
+                <mat-radio-button  class="radio-button" [value]="false" [checked]="isChecked===false">Inactivo</mat-radio-button>
+              </mat-radio-group>
+              <mat-error>Campo Requerio</mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+
       </div>
       <!-- end grid-->
 
