--- a/src/app/pages/clients/client-create/client-create.component.scss
+++ b/src/app/pages/clients/client-create/client-create.component.scss
@@ -1,7 +1,3 @@
-
-
-
-
 .example-container .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
@@ -19,10 +15,10 @@
 }
 
 .example-container .mat-radio-button {
-  margin: 0 12px;
+  margin: 0 8px;
 }
 .mat-form-field {
-  font-size: 13px;
+  font-size: 12px;
   width: 100%;
 }
 @import '../../../@theme/styles/themes';
@@ -43,3 +39,28 @@
     @include nb-rtl(margin-left, 1rem);
   }
 }
+
+.full-width {
+  display: flex;
+  margin-left: 10px;
+}
+
+.radio-container {
+  position: relative;
+}
+
+.flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+
+}
+
+.radio-button {
+  padding: 2px 2px 2px 2px;
+}
+
+.wrap-label-text {
+  white-space: normal;
+}
+
