--- a/src/app/pages/clients/client-delete/client-delete.component.html
+++ b/src/app/pages/clients/client-delete/client-delete.component.html
@@ -1,6 +1,6 @@
 <section>
 
-  <h2 mat-dialog-title mat-card-title>Eliminar Cliente</h2>
+  <h2 mat-dialog-title mat-card-title>Eliminar profesion</h2>
 
       <!--mat dialog content-->
       <mat-dialog-content mat-card-content>
