--- a/src/app/pages/professions/professions-main/professions-main.component.html
+++ b/src/app/pages/professions/professions-main/professions-main.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12">
 
     <nb-card>
-        <nb-card-header>Profesiones </nb-card-header>
+        <nb-card-header>{{titulo}} </nb-card-header>
         <nb-card-body>
             <section>
                 <div class="example-button-row">
