--- a/src/app/pages/clients/client-main/client-main.component.html
+++ b/src/app/pages/clients/client-main/client-main.component.html
@@ -1,5 +1,4 @@
 <div class="col-md-12">
-
   <nb-card>
     <nb-card-header>Clientes </nb-card-header>
     <nb-card-body>
@@ -38,9 +37,20 @@
               </td>
             </ng-container>
 
+            <!-- Address Column -->
+            <ng-container matColumnDef="direccion">
+              <th mat-header-cell *matHeaderCellDef  mat-sort-header> Direccion </th>
+              <td mat-cell *matCellDef="let element">
+                <p align='left'>
+                {{element.address.text}},{{element.address.colonia}},{{element.address.district}},{{element.address.state}},{{element.address.city}},{{element.address.postalCode}},
+                {{element.address.country}}
+              </p>
+              </td>
+            </ng-container>
+
          <!-- isActive Column -->
             <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef > actions </th>
+              <th mat-header-cell *matHeaderCellDef > Acciones </th>
               <td mat-cell *matCellDef="let element">
                 <button mat-icon-button color="primary" (click)="editarClient(element)"><mat-icon>edit</mat-icon>
                 </button>
