--- a/src/app/pages/clients/client-main/client-main.component.scss
+++ b/src/app/pages/clients/client-main/client-main.component.scss
@@ -8,7 +8,7 @@ table {
 }
 
 td, th {
-  width: 25%;
+  width: 5%;
 }
 button {
   margin-right: 8px;
@@ -39,4 +39,27 @@ mat-grid-tile {
 
 .example-container .mat-radio-button {
   margin: 0 12px;
+}
+.mat-column-Id {
+  flex: 0 0 10%;
+}
+.mat-column-direccion {
+  flex: 0 0 50%;
+}
+.example-loading-shade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 56px;
+  right: 0;
+  background: rgba(0, 0, 0, 0.15);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-rate-limit-reached {
+  max-width: 360px;
+  text-align: center;
 }
