--- a/src/app/pages/clients/client-main/client-main.component.html
+++ b/src/app/pages/clients/client-main/client-main.component.html
@@ -18,28 +18,18 @@
           <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
             <!-- Id Column -->
             <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header > Id </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header > ID </th>
               <td mat-cell *matCellDef="let element"> {{element.id}} </td>
             </ng-container>
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header > Cliente </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header > CLIENTE </th>
               <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
-
-            <!-- isActive Column -->
-            <ng-container matColumnDef="isActive">
-              <th mat-header-cell *matHeaderCellDef  mat-sort-header> Activo </th>
-              <td mat-cell *matCellDef="let element">
-              <mat-chip color="primary" selected *ngIf="element.isActive">Activo</mat-chip>
-              <mat-chip color="warn" selected *ngIf="!element.isActive">Inactivo</mat-chip>
-              </td>
-            </ng-container>
-
             <!-- Address Column -->
             <ng-container matColumnDef="direccion">
-              <th mat-header-cell *matHeaderCellDef  mat-sort-header> Direccion </th>
+              <th mat-header-cell *matHeaderCellDef  mat-sort-header> DIRECCION </th>
               <td mat-cell *matCellDef="let element">
                 <p align='left'>
                 {{element.address.text}},{{element.address.colonia}},{{element.address.district}},{{element.address.state}},{{element.address.city}},{{element.address.postalCode}},
@@ -47,10 +37,20 @@
               </p>
               </td>
             </ng-container>
+            <!-- isActive Column -->
+            <ng-container matColumnDef="isActive">
+              <th mat-header-cell *matHeaderCellDef  mat-sort-header> ACTIVO </th>
+              <td mat-cell *matCellDef="let element">
+              <mat-chip color="primary" selected *ngIf="element.isActive">Activo</mat-chip>
+              <mat-chip color="warn" selected *ngIf="!element.isActive">Inactivo</mat-chip>
+              </td>
+            </ng-container>
+
+
 
          <!-- isActive Column -->
             <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef > Acciones </th>
+              <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
               <td mat-cell *matCellDef="let element">
                 <button mat-icon-button color="primary" (click)="editarClient(element)"><mat-icon>edit</mat-icon>
                 </button>
