:necktie: added list capacities by transport type

--- a/src/app/pages/transport-types/transport-type-main/transport-type-main.component.html
+++ b/src/app/pages/transport-types/transport-type-main/transport-type-main.component.html
@@ -35,7 +35,7 @@
                           <button mat-icon-button color="primary">
                             <mat-icon>add</mat-icon>
                         </button>
-                        <button mat-icon-button color="primary">
+                        <button mat-icon-button color="primary" (click)="showCapacities(element)">
                           <mat-icon>list</mat-icon>
                       </button>
                         </td>
