--- a/src/app/pages/transport-capacities/transport-capacity-create/transport-capacity-create.component.html
+++ b/src/app/pages/transport-capacities/transport-capacity-create/transport-capacity-create.component.html
@@ -50,7 +50,26 @@
             </mat-form-field>
           </div>
         </div>
-
+        <div class="col-sm-6">
+          <div class="form-group">
+            <mat-form-field class="example-full-width" #field floatLabel="always" appearance="outline" >
+              <mat-label>Number</mat-label>
+              <input type="text"
+                     placeholder="Pick one"
+                     aria-label="Number"
+                     matInput
+                     formControlName="transportType"
+                     [matAutocomplete]="auto"
+                     [ngClass]="{ 'is-invalid': submitted && f.transportType.errors }">
+              <mat-autocomplete #auto="matAutocomplete" (optionSelected)="optionSelected($event.option.value)" [displayWith]="displayProperty">
+                <mat-option *ngFor="let option of transportTypes" [value]="option">
+                  {{option.name}}
+                </mat-option>
+              </mat-autocomplete>
+              <mat-error *ngIf="submitted && f.transportType.errors" >Campo Requerido</mat-error>
+            </mat-form-field>
+            </div>
+          </div>
       </div>
       <!-- end grid-->
 
