--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,6 +7,12 @@
     <li *ngFor="let error of errors" class="alert-message">Login/Email incorrecto, por favor intenta de nuevo.</li>
   </ul>
 </nb-alert>
+<nb-alert *ngIf="messageInvalid" outline="danger" role="alert">
+  <p class="alert-title"><b>Oh !</b></p>
+  <ul class="alert-message-list">
+    <li  class="alert-message">{{messageInvalid}}</li>
+  </ul>
+</nb-alert>
 
 
 
