--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -1,1 +1,116 @@
-<p>check-list-main works!</p>
+<div class="col-md-12">
+  <nb-card>
+    <nb-card-header>Check List </nb-card-header>
+    <nb-card-body>
+      <section>
+        <div class="example-button-row">
+          <button mat-flat-button color="primary" (click)="openDialog()">Agregar</button>
+        </div>
+      </section>
+      <section>
+        <!-- filter -->
+        <mat-form-field appearance="standard">
+          <mat-label>Buscar </mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+        </mat-form-field>
+        <!-- end filter -->
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+            <!-- Id Column -->
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >ID </th>
+              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="remision">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >REMISION </th>
+              <td mat-cell *matCellDef="let element"> {{element.remision}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="date">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >FECHA</th>
+              <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="hours">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header > HORA </th>
+              <td mat-cell *matCellDef="let element"> {{element.hours}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="partner">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header > CLIENTE </th>
+              <td mat-cell *matCellDef="let element"> {{element.partner.name}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="transportLine">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >LINEA TRANSPORTE </th>
+              <td mat-cell *matCellDef="let element"> {{element.transportLine.name}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="transportType">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>TIPO TRANSPORTE </th>
+              <td mat-cell *matCellDef="let element">
+                {{element.transportCapacity.transportType.name}}
+                {{element.transportCapacity.capacity}}
+                {{element.transportCapacity.unity}}
+               </td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="noSello">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >NO. SELLO </th>
+              <td mat-cell *matCellDef="let element"> {{element.noSello}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="surveillance">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header > VIGILANCIA </th>
+              <td mat-cell *matCellDef="let element"> {{element.surveillance.firstName}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="responsible">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header > RESPONSABLE </th>
+              <td mat-cell *matCellDef="let element"> {{element.responsible.firstName}} </td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="noRampa">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header >NO. RAMPA </th>
+              <td mat-cell *matCellDef="let element"> {{element.noRampa}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef > ACCIONES </th>
+              <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="primary" (click)="editarClient(element)"><mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" (click)="deleteClient(element)" [disabled]="element.isActive === false">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
+
+            </tr>
+          </table>
+        <!--Paginator -->
+        <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina"
+                      [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions"
+                      (page)="paginar($event)" aria-label="arialLabel"
+                      showFirstLastButtons>
+        </mat-paginator>
+        <!--End Paginator -->
+
+        </div>
+      </section>
+    </nb-card-body>
+  </nb-card>
+</div>
+
+
+
